--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+
+Check <a href="https://rdatamining.github.io/Coronavirus-map.html">a world map of COVID-19</a>
+
+
 </body>
 </html>
