--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>I'm hosted with GitHub Pages.</p>
 
 
-Check <a href="https://rdatamining.github.io/Coronavirus-map.html">a world map of COVID-19</a>
+Check <a href="https://www3.rdatamining.com/Coronavirus-map.html">a world map of COVID-19</a>
 
 
 </body>
